k8s/user-service/deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api
  namespace: default
  labels:
    app.kubernetes.io/name: user-api
    app.kubernetes.io/component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: user-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: user-api
    spec:
      containers:
        - name: server
          image: meta/user-api:v1.0
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8080
          
          # We use envFrom for independent variables like SERVER_PORT
---
apiVersion: v1
kind: Service
metadata:
  name: user-api
  namespace: default
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: user-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
