k8s/user-service/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-and-internal-apps
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: user-api # Traffic target
  policyTypes:
    - Ingress
  ingress:
    # Rule 1: External Traffic via Nginx
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx

    # Rule 2: Inter-service communicatoin allowed to streaming service
    - from:
        - podSelector:
            matchLabels:
              app: streaming-api

    # Rule 3: Inter-service communicatoin allowed to song service
    - from:
        - podSelector:
            matchLabels:
              app: song-api
